--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         const links = document.querySelector('.links');
 
         button.addEventListener('click', () => {
+            // Redirect to Adsterra link
+            window.location.href = "https://www.profitablecpmrate.com/m8cijrbt0b?key=22574d5c2af69ed44781e0b7906c4ded";
+
+            // Start timer after redirect
             button.style.display = 'none';
             timer.style.display = 'block';
 
